--- a/style.css
+++ b/style.css
@@ -1,1 +1,34 @@
-p{}
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0px;
+}
+h1{
+    font-size: 50px;
+}
+.orange-color{
+    color: chocolate;
+}
+section{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+    padding-top: 20px 15px; 
+}
+.half-width img{
+    width: 120%;
+}
+.link-button{
+   text-decoration: none; 
+   background-image: linear-gradient(orange tomato);
+   padding: 10px 40px;
+   border-radius: 5px;
+   color: white
+   font-weight: 700;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+    padding-left: 5px;
+}
+    
